--- a/index.html
+++ b/index.html
@@ -452,15 +452,15 @@
                             <i class="fas fa-envelope"></i>
                             ayesha.akhtar209@gmail.com
                         </a>
-                        <a href="#" class="contact-item">
+                        <a href="https://www.linkedin.com/in/ayeshaakhtar209/" class="contact-item">
                             <i class="fab fa-linkedin"></i>
                             LinkedIn
                         </a>
-                        <a href="#" class="contact-item">
+                        <a href="https://github.com/ayeshakhtar209" class="contact-item">
                             <i class="fab fa-github"></i>
                             Github
                         </a>
-                        <a href="#" class="contact-item">
+                        <a href="https://medium.com/@ayesha.akhtar209" class="contact-item">
                             <i class="fab fa-medium"></i>
                             Medium
                         </a>
