--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             text-align: center;
             position: relative;
             overflow: hidden;
-            width: 100vw;
-            margin-left: calc(-50vw + 50%);
+            width: 100%;
         }
 
         .header::before {
@@ -436,38 +435,38 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="resume-card">
-            <header class="header">
-                <div class="header-content">
-                    <h1 class="name">Ayesha Akhtar</h1>
-                    <p class="title">Fulbright Scholar, Robotics Engineer & AI Researcher</p>
+    <div class="resume-card">
+        <header class="header">
+            <div class="header-content">
+                <h1 class="name">Ayesha Akhtar</h1>
+                <p class="title">Fulbright Scholar, Robotics Engineer & AI Researcher</p>
 
-                    <div class="contact-info">
-                        <a href="tel:7748237774" class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            (774) 823-7774
-                        </a>
-                        <a href="mailto:ayesha.akhtar209@gmail.com" class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            ayesha.akhtar209@gmail.com
-                        </a>
-                        <a href="https://www.linkedin.com/in/ayeshaakhtar209/" class="contact-item">
-                            <i class="fab fa-linkedin"></i>
-                            LinkedIn
-                        </a>
-                        <a href="https://github.com/ayeshakhtar209" class="contact-item">
-                            <i class="fab fa-github"></i>
-                            Github
-                        </a>
-                        <a href="https://medium.com/@ayesha.akhtar209" class="contact-item">
-                            <i class="fab fa-medium"></i>
-                            Medium
-                        </a>
-                    </div>
+                <div class="contact-info">
+                    <a href="tel:7748237774" class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        (774) 823-7774
+                    </a>
+                    <a href="mailto:ayesha.akhtar209@gmail.com" class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        ayesha.akhtar209@gmail.com
+                    </a>
+                    <a href="#" class="contact-item">
+                        <i class="fab fa-linkedin"></i>
+                        LinkedIn
+                    </a>
+                    <a href="#" class="contact-item">
+                        <i class="fab fa-github"></i>
+                        Github
+                    </a>
+                    <a href="#" class="contact-item">
+                        <i class="fab fa-medium"></i>
+                        Medium
+                    </a>
                 </div>
-            </header>
+            </div>
+        </header>
 
+        <div class="container">
             <!---------------- Education -->
             <div class="content">
                 <section class="section">
@@ -757,11 +756,11 @@
                     </div>
                 </section>
             </div>
-
-            <footer class="footer">
-                <p>&copy; 2025 Ayesha Akhtar. All rights reserved. | Built with ❤️ for GitHub Pages</p>
-            </footer>
         </div>
+
+        <footer class="footer">
+            <p>&copy; 2025 Ayesha Akhtar. All rights reserved. | Built with ❤️ for GitHub Pages</p>
+        </footer>
     </div>
 </body>
 </html>
