--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                 <!---------------- Projects -->
                 <section class="section">
                     <h2 class="section-title"><i class="fas fa-project-diagram"></i> Projects</h2>
-                    
-                    <div class="project-item" href="https://github.com/ayeshakhtar209/depth-guided-grasp">
+
+                    <href="https://github.com/ayeshakhtar209/depth-guided-grasp">
+                    <div class="project-item">
                         <div class="item-header">
                             <div>
                                 <h3 class="item-title">DEPTH-GUIDED GRASP: Robust Multi-Object Grasping Through Depth-Informed Topological Analysis</h3>
@@ -101,6 +102,7 @@
                             </div>
                         </div>
                     </div>
+                    </href>
 
                     <div class="project-item">
                         <div class="item-header">
