--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
                 <section class="section">
                     <h2 class="section-title"><i class="fas fa-project-diagram"></i> Projects</h2>
 
-                    <href="https://github.com/ayeshakhtar209/depth-guided-grasp">
-                    <div class="project-item">
-                        <div class="item-header">
-                            <div>
-                                <h3 class="item-title">DEPTH-GUIDED GRASP: Robust Multi-Object Grasping Through Depth-Informed Topological Analysis</h3>
+                    <a href="https://github.com/ayeshakhtar209/depth-guided-grasp">
+                        <div class="project-item">
+                            <div class="item-header">
+                                <div>
+                                    <h3 class="item-title">DEPTH-GUIDED GRASP: Robust Multi-Object Grasping Through Depth-Informed Topological Analysis</h3>
+                                </div>
+                                <span class="item-date">May 2025</span>
                             </div>
-                            <span class="item-date">May 2025</span>
-                        </div>
-                        <div class="item-description">
-                            <p>Designed and implemented an advanced robotic grasping system using depth-informed topological analysis for multi-object manipulation. Created algorithms for valley detection, three-point grasp planning, and dynamic collision avoidance, integrated with ROS for real-world robotic applications.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">ROS</span>
-                                <span class="tech-tag">Ubuntu</span>
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Computer Vision</span>
-                                <span class="tech-tag">Intel RealSense D455</span>
-                                
+                            <div class="item-description">
+                                <p>Designed and implemented an advanced robotic grasping system using depth-informed topological analysis for multi-object manipulation. Created algorithms for valley detection, three-point grasp planning, and dynamic collision avoidance, integrated with ROS for real-world robotic applications.</p>
+                                <div class="project-tech">
+                                    <span class="tech-tag">ROS</span>
+                                    <span class="tech-tag">Ubuntu</span>
+                                    <span class="tech-tag">Python</span>
+                                    <span class="tech-tag">Computer Vision</span>
+                                    <span class="tech-tag">Intel RealSense D455</span>
+                                    
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    </href>
+                    </a>
 
                     <div class="project-item">
                         <div class="item-header">
