--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <span class="skill-tag">Linux</span>
                                 <span class="skill-tag">ROS</span>
                                 <span class="skill-tag">MATLAB</span>
-                                <span class="skill-tag">SolidWorks</span>
+                                <span class="skill-tag"><a href="https://www.udemy.com/certificate/UC-71d8c669-bb2e-4d03-b4de-c45535e4f1c1/"> SolidWorks</a></span>
                                 <span class="skill-tag">Atlassian Jira & Confluence</span>
                             </div>
                         </div>
