--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             <p>Google Developers Group (GDG), Islamabad</p>
                         </div>
                         <div class="activity-item">
-                            <h3><i class="fas fa-certificate"></i> ML Course</h3>
+                            <h3><i class="fas fa-certificate"></i> <a href="https://coursera.org/share/336812665c736f7b320944f98801010c">ML Course</a></h3>
                             <p>Andrew Ng, Coursera</p>
                         </div>
                     </div>
